fixed spacing with fourth section

--- a/styles.css
+++ b/styles.css
@@ -145,11 +145,11 @@ h3{
     margin-right: 20%;
 }
 .fourth-section{
-    height: 190px;
+    height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    margin-bottom: 40px;
 }
 .fourth-border{
     border: 2px solid blue;
